更新项目配置文件libVersion至2.32.3，删除不再使用的project.private.config.json文件，重构首页逻辑，提取任务和记录生成函数，优化代码结构以提升可维护性和性能。

--- a/components/date-picker/index.wxml
+++ b/components/date-picker/index.wxml
@@ -14,7 +14,7 @@
         </text>
     </view>
     <view class="dp-grid">
-        <view class="dp-row" wx:for="{{calendar.grid}}" wx:for-item="row" wx:key="*this">
+        <view class="dp-row" wx:for="{{calendar.grid}}" wx:for-item="row" wx:key="index">
             <view class="dp-cell {{cell.inMonth ? '' : 'dp-cell--placeholder'}} {{cell.isToday ? 'dp-cell--today' : ''}} {{cell.isSelected ? 'dp-cell--selected' : ''}}" wx:for="{{row}}" wx:for-item="cell" wx:key="date" data-date="{{cell.date}}" bindtap="onSelectDate">
                 <view wx:if="{{cell.inMonth}}" class="dp-cell-inner">
                     <text class="dp-day">{{cell.day}}</text>
