--- a/pages/meds/index.wxss
+++ b/pages/meds/index.wxss
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: center;
     padding: 24rpx 0;
+    position: relative;
 }
 
 .toggle-circle {
@@ -53,9 +54,9 @@
 /* 药物余量显示 - 大红圆右侧 */
 .medicine-remaining {
     position: absolute;
-    top: 50%;
-    right: 60rpx;
-    transform: translateY(-50%);
+    right: 40rpx;
+    top: 10%;
+    transform: translateY(-10%);
     display: flex;
     align-items: center;
     z-index: 10;
@@ -124,12 +125,6 @@
     align-items: center;
     justify-content: center;
     z-index: 1000;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.2s ease-out;
-}
-
-.modal-overlay--show {
     opacity: 1;
     visibility: visible;
 }
@@ -142,13 +137,11 @@
     padding: 40rpx 36rpx 32rpx;
     display: flex;
     flex-direction: column;
-    transform: scale(0.96);
+    transform: scale(1);
     transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     box-shadow: 0 12rpx 40rpx rgba(0, 0, 0, 0.08);
-}
-
-.modal-overlay--show .modal-container {
-    transform: scale(1);
+    opacity: 1;
+    visibility: visible;
 }
 
 
