--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,4 @@
-<view class="page-empty">
-  <text class="empty-text">此页面已清空---首页</text>
-  <text class="empty-sub">仅保留底部导航占位</text>
+<view class="home-page">
+  <line-chart categories="{{chartCategories}}" series="{{chartSeries}}" item-count="4" />
 </view>
 
