feat(medicine): 新增服药记录页面及药物管理功能
添加服药记录页面，包含日期选择、服药状态切换和药物余量管理功能
实现药物总量设置和消耗跟踪，支持不同余量状态的颜色提示

--- a/pages/medicine/index.wxml
+++ b/pages/medicine/index.wxml
@@ -1,5 +1,5 @@
 <!-- 服药模块（精简协调版） -->
-<view class="meds-page">
+<view class="medicine-page">
     <date-picker refresh-key="{{datePickerRefreshKey}}" bind:change="onDateChange" bind:monthchange="onMonthChange" />
     
     <view class="circle-wrapper">
