--- a/components/line-chart/index.wxml
+++ b/components/line-chart/index.wxml
@@ -1,3 +1,3 @@
 <view class="chart-card">
-  <canvas id="{{canvasId}}" canvas-id="{{canvasId}}" type="2d" class="chart-canvas" bindtouchstart="onChartTouchStart" bindtouchmove="onChartTouchMove" bindtouchend="onChartTouchEnd"></canvas>
+  <canvas id="{{canvasId}}" type="2d" class="chart-canvas" bindtouchstart="onChartTouchStart" bindtouchmove="onChartTouchMove" bindtouchend="onChartTouchEnd"></canvas>
 </view>
