feat(medicine): 重构药物管理页面逻辑并添加云函数支持
将药物管理页面的状态切换逻辑重构为使用云函数进行数据同步
新增 medicineInventory 云函数用于管理药物库存数据
优化页面加载性能和错误处理机制

--- a/pages/medicine/index.wxml
+++ b/pages/medicine/index.wxml
@@ -2,7 +2,7 @@
 <view class="medicine-page">
     <date-picker refresh-key="{{datePickerRefreshKey}}" bind:change="onDateChange" bind:monthchange="onMonthChange" />
     <view class="circle-wrapper">
-        <view class="toggle-circle {{hasTakenToday ? 'circle--green' : 'circle--red'}} {{isToggling ? 'circle--press' : ''}}" bindtap="toggleMedicineStatus" hover-class="tap-active" hover-stay-time="80">
+        <view class="toggle-circle {{hasTakenToday ? 'circle--green' : 'circle--red'}} {{isToggling ? 'circle--press' : ''}}" bindtap="handleMedicineStatusToggle" hover-class="tap-active" hover-stay-time="80">
             <text class="circle-time">{{hasTakenToday && medicineRecord ? medicineRecord.time : ''}}</text>
             <text class="circle-text">{{hasTakenToday ? '已服药' : '未服药'}}</text>
         </view>
